build!: sobe a toolchain e o runtime de Java 21 para Java 25 (LTS)
Migra a toolchain de compilação (build.gradle.kts), o runner de CI e as
duas base images do Docker (jdk de build + jre de runtime) de Java 21 para
Java 25 (LTS). O plugin Kotlin deriva o jvmTarget da java.toolchain, então
o bump alcança compilação e bytecode juntos.

Motivação (já prevista em docs/PLANO-IMPLEMENTACAO.md M6): ZGC geracional
maduro como padrão (protege o p99) e compact object headers (JEP 519) para
reduzir memória por objeto — relevante para o índice de buckets do núcleo.

Docs atualizadas para o novo stack (README, AGENTS, CONTRIBUTING,
VARIAVEIS-DE-AMBIENTE, PLANO-IMPLEMENTACAO). Tags temurin:25-*-ubi10-minimal
verificadas no registry.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>